# blender-codex-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  TERMS_AND_CONDITIONS.md  addon.py  main.py  pyproject.toml
.agents/plugins/: marketplace.json
docs/: ARTICLE_EN.md  ARTICLE_IT.md  FAQ_EN.md  FAQ_IT.md  PUBLISHING_CHECKLIST.md  WORDPRESS_EMBED.md  YOUTUBE_DEMO_SCRIPT.md  YOUTUBE_DETAILED_SCRIPT_IT.md
examples/: web_ready_scene_setup.py
plugins/blender-codex-connector/: .mcp.json  README.md
plugins/blender-codex-connector/.codex-plugin/: plugin.json
src/blender_codex_mcp/: __init__.py  config.py  server.py  telemetry.py  telemetry_decorator.py
